<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical" >
    
    <CheckBox android:id="@+id/enable_cb" 
        android:layout_width="match_parent"
        android:text="@string/scanner" 
        android:visibility="gone"
        android:layout_height="wrap_content"/>

    <LinearLayout
         android:id="@+id/base_barcode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/base_bar" />

        <EditText
            android:id="@+id/base_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_scan_base_code"
            android:textSize="18sp"
            android:inputType="text"
            android:scrollHorizontally="true" />
    </LinearLayout>

    <LinearLayout
         android:id="@+id/times_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/test_total" />

        <EditText
            android:id="@+id/times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="number"
            android:scrollHorizontally="true" />
    </LinearLayout>

    <LinearLayout
         android:id="@+id/span_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/scan_interval" />

        <EditText
            android:id="@+id/span"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_interval"
            android:textSize="18sp"
            android:inputType="number"
            android:scrollHorizontally="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_test" />

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_test" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/current_bar" />

        <TextView
            android:id="@+id/barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:scrollHorizontally="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/test_result" />

        <TextView
            android:id="@+id/result_text"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/wrong_code_list"/>
			
        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    

</LinearLayout>